<resources>
    <string name="app_name">I am the Gardener</string>
    <string name="map_api">AIzaSyD9zeuH_4NtwO3B4UoFVbkiFf4kt4nrhoE</string>
    <string name="rs">Rs.</string>

    <!--Login Activity-->
    <string name="signin_title">Sign In</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="askToSignUp">Sign Up</string>
    <string name="continue_button_text">Continue</string>
    <string name="app_logo">app_logo</string>

    <!-- Sign Up Activity-->
    <string name="signUp_title">Sign Up</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="phoneNumber_hint">Phone Number</string>
    <string name="haveAnAccount">Already have an account?</string>
    <string name="askToLogin">Login</string>
    <string name="agreeTitle">By Signup you agree to our</string>
    <string name="policyLink"><u>Privacy Policy</u> &amp; <u>Terms of Service</u> </string>

    <string name="forgotPasswordScreen_title">Enter Email Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="the_wide_variety_of_restaurants_to_choose_from">The wide variety of restaurants to choose from</string>
    <string name="order_now">Order Now</string>
    <string name="offers">Offers</string>
    <string name="favourite">Favourite</string>
    <string name="more">More</string>
    <string name="_25">25</string>
    <string name="_9841858531">9841858531</string>
    <string name="dipesh_lama">Dipesh Lama</string>
    <string name="reward_point">Reward Point</string>
    <string name="logout">Logout</string>
    <string name="cart">cart</string>
    <string name="peace_lily_spathiphyllum_bingo_cupido">Peace Lily Spathiphyllum Bingo Cupido</string>
    <string name="_11cm">11cm</string>
    <string name="_12cm">12cm</string>
    <string name="_16cm">16cm</string>
    <string name="description">Description</string>
    <string name="_3cm">3cm</string>
    <string name="add">ADD</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="_10_discount">10% Discount</string>
    <string name="add_more_items">Add More Items +</string>
    <string name="add_rs">Add Rs. %1$s</string>
    <string name="rs_">Rs. %1$s</string>
    <string name="nrs_">NRs. %1$s</string>
    <string name="discount_Ns_">- Nrs. %1$s</string>
    <string name="re_order">Re-order</string>
    <string name="items_total">Items Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="offer_discount">Offer Discount</string>
    <string name="delivery_discount">Delivery Discount</string>
    <string name="grand_total">Grand Total</string>
    <string name="item">ITEMS (%1$s)</string>
    <string name="no_items"> %1$s Items</string>
    <string name="see_all">SEE ALL</string>
    <string name="payment_details">Payment Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="add_a_delivery_address">Add a Delivery Address</string>
    <string name="add_a_promo_code">Add a Promo Code</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="full_name">Full Name</string>
    <string name="region">Region</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="select_a_label_for_effective_delivery">Select a label for effective delivery</string>
    <string name="office">Office</string>
    <string name="confirm">Confirm</string>
    <string name="edit_address">Edit Address</string>
    <string name="plus_taxes">Plus Taxes</string>
    <string name="search">search</string>
    <string name="ekbana_solutions">EKbana Solutions</string>
    <string name="powered_by_koklass">Powered By <b>Koklass</b></string>
    <string name="made_in_nepal">#Made in Nepal</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>